--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div class="uk-offcanvas-content">
+    <customer-header></customer-header>
+    <customer-sidebar></customer-sidebar>
+    <router-outlet></router-outlet>
+</div>
