--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -29,6 +29,7 @@
           <div>
             <div class="uk-text-center">
               <a class="uk-link-reset uk-text-small" data-uk-toggle="target: #recover;animation: uk-animation-slide-top-small">Quên mật khẩu?</a>
+              | <a class="uk-link-reset uk-text-small" [routerLink]="['/register']">Đăng ký</a>
             </div>
             <div class="uk-margin-small-top" id="recover" hidden>
               <form action="login.html">
