--- a/src/app/customer/layout/header/header.component.html
+++ b/src/app/customer/layout/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="uk-container uk-container-expand uk-background-primary">
     <nav class="uk-navbar uk-light" data-uk-navbar="mode:click">
       <div class="uk-navbar-left">
-        <a class="uk-navbar-item uk-logo" href="#">Logo</a>
+        <a class="uk-navbar-item uk-logo" href="#">QrMax</a>
         <ul class="uk-navbar-nav uk-visible@m">
           <li class="uk-active"><a href="#">Accounts</a></li>
           <li>
