--- a/src/app/guest/guest.component.html
+++ b/src/app/guest/guest.component.html
@@ -8,7 +8,7 @@
         <nav class="uk-navbar-container uk-navbar-transparent" data-uk-navbar>
           <div class="uk-navbar-left">
             <div class="uk-navbar-item">
-              <a class="uk-logo" href=""><img src="img/cover-logo.svg" alt="Logo"></a>
+              <a class="uk-logo" href=""><img src="/assets/image/logo.png" alt="Logo"></a>
             </div>
           </div>
           <div class="uk-navbar-right">
@@ -17,7 +17,6 @@
               <li class="uk-visible@s"><a href="">Features</a></li>
               <li class="uk-visible@s"><a href="">Security</a></li>
               <li class="uk-visible@s"><a href="">Testimonials</a></li>
-              <li><a class="uk-navbar-toggle" data-uk-toggle data-uk-navbar-toggle-icon href="#offcanvas-nav"></a></li>
             </ul>
           </div>
         </nav>
@@ -32,43 +31,21 @@
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad, reiciendis maxime, facilis nam natus incidunt provident.</p>
       </div>
       <div class="uk-margin-medium-top animate uk-invisible" data-uk-margin data-uk-scrollspy-class="uk-animation-fade uk-invisible">
-        <a class="uk-button uk-button-default uk-button-large uk-width-2-3 uk-width-auto@s" data-uk-icon="arrow-right" title="Learn More">LEARN MORE</a>
-        <a class="uk-button uk-button-primary uk-button-large uk-width-2-3 uk-width-auto@s" data-uk-icon="check" title="Learn More">TRY IT OUT</a>
+        <a class="uk-button uk-button-default uk-button-large uk-width-2-3 uk-width-auto@s" data-uk-icon="arrow-right" title="Đăng nhập" [routerLink]="['/auth/login']">Đăng nhập </a>
+        <a class="uk-button uk-button-primary uk-button-large uk-width-2-3 uk-width-auto@s" data-uk-icon="check" title="Đăng kí" [routerLink]="['/register']">Đăng kí </a>
       </div>
     </div>
     <!-- /TEXT -->
 
     <!-- FOOT -->
     <div class="uk-position-bottom-center uk-position-small">
-      <span class="uk-text-small uk-text-center">© 2018 | <a href="https://github.com/zzseba78/Kick-Off" title="Created by KickOff">Created by KickOff</a> | Built with <a href="http://getuikit.com" title="Visit UIkit 3 site" target="_blank" data-uk-tooltip><span data-uk-icon="uikit"></span></a></span>
+      <span class="uk-text-small uk-text-center">© 2018 | <a href="https://opencoder.org" title="Created by KickOff">Created by GnurtNel</a></span>
     </div>
     <!-- /FOOT -->
 
   </div>
 
   <!-- OFFCANVAS -->
-  <div id="offcanvas-nav" data-uk-offcanvas="flip: true; overlay: false">
-    <div class="uk-offcanvas-bar uk-offcanvas-bar-animation uk-offcanvas-slide">
-      <button class="uk-offcanvas-close uk-close uk-icon" type="button" data-uk-close></button>
-      <ul class="uk-nav uk-nav-default">
-        <li class="uk-active"><a href="#">Active</a></li>
-        <li class="uk-parent">
-          <a href="#">Parent</a>
-          <ul class="uk-nav-sub">
-            <li><a href="#">Sub item</a></li>
-            <li><a href="#">Sub item</a></li>
-          </ul>
-        </li>
-        <li class="uk-nav-header">Header</li>
-        <li><a href="#js-options"><span class="uk-margin-small-right uk-icon" data-uk-icon="icon: table"></span> Item</a></li>
-        <li><a href="#"><span class="uk-margin-small-right uk-icon" data-uk-icon="icon: thumbnails"></span> Item</a></li>
-        <li class="uk-nav-divider"></li>
-        <li><a href="#"><span class="uk-margin-small-right uk-icon" data-uk-icon="icon: trash"></span> Item</a></li>
-      </ul>
-      <h3>Title</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-  </div>
   <!-- /OFFCANVAS -->
 
 </div>
