--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,5 +1,11 @@
 <div class="uk-offcanvas-content">
     <customer-header></customer-header>
     <customer-sidebar></customer-sidebar>
-    <router-outlet></router-outlet>
+    <div id="content" data-uk-height-viewport="expand: true">
+        <div class="uk-container uk-container-expand">
+            <div class="uk-grid uk-grid-medium uk-grid-match" data-uk-grid>
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
 </div>
