--- a/src/app/customer/product/create-product/create-product.component.html
+++ b/src/app/customer/product/create-product/create-product.component.html
@@ -35,13 +35,13 @@
           <div class="uk-margin">
             <label class="uk-form-label" for="form-horizontal-text">Thông tin sản phẩm</label>
             <div class="uk-form-controls">
-                <p-editor ngModel [style]="{'height':'320px'}" name="information"></p-editor>
+                <p-editor ngModel [style]="{'height':'320px'}" name="description"></p-editor>
             </div>
           </div>
         <div class="uk-margin">
             <label class="uk-form-label" for="form-horizontal-select"></label>
             <div class="uk-form-controls">
-                <button class="uk-button uk-button-primary" (click)="onRegister(f)">Đăng kí</button>
+                <button class="uk-button uk-button-primary" (click)="onRegister(f)">Thêm sản phẩm</button>
             </div>
         </div>
     
