--- a/src/app/customer/layout/sidebar/sidebar.component.html
+++ b/src/app/customer/layout/sidebar/sidebar.component.html
@@ -28,11 +28,11 @@
         </ul>
       </li> -->
 <li class="uk-nav-header">Menu</li>
-      <li><a href="article.html"><span class="uk-margin-small-right" data-uk-icon="icon: info"></span> Thống kê</a></li>
-      <li><a [routerLink]="['product']"><span class="uk-margin-small-right" data-uk-icon="icon: image"></span> Sản phẩm</a></li>
-      <li class="uk-nav-divider"></li>
-      <li><a href="login.html"><span class="uk-margin-small-right" data-uk-icon="icon: sign-in"></span>Đơn hàng</a></li>
-      <li><a href="login-dark.html"><span class="uk-margin-small-right" data-uk-icon="icon: sign-in"></span>Theo dõi đơn hàng</a></li>
+      <li><a [routerLink]="['/customer']"><span class="uk-margin-small-right" data-uk-icon="icon: home"></span> Thống kê</a></li>
+      <li><a [routerLink]="['product']"><span class="uk-margin-small-right" data-uk-icon="icon: tv"></span> Sản phẩm</a></li>
+      <!-- <li class="uk-nav-divider"></li> -->
+      <li><a [routerLink]="['order']"><span class="uk-margin-small-right" data-uk-icon="icon: list"></span>Đơn hàng</a></li>
+      <li><a href="login-dark.html"><span class="uk-margin-small-right" data-uk-icon="icon: comments"></span>Theo dõi đơn hàng</a></li>
       <li><a href="login-dark.html"><span class="uk-margin-small-right" data-uk-icon="icon: sign-in"></span>Khuyến mại</a></li>
     </ul>
   </div>
