--- a/src/app/customer/product/create-product/create-product.component.html
+++ b/src/app/customer/product/create-product/create-product.component.html
@@ -7,7 +7,7 @@
           <div class="uk-margin">
             <label class="uk-form-label" for="form-horizontal-text">Tên sản phẩm</label>
             <div class="uk-form-controls">
-                <input class="uk-input"  type="text" placeholder="Nhập tên sản phẩm" ngModel name="title">
+                <input class="uk-input"  type="text" placeholder="Nhập tên sản phẩm" ngModel name="name">
             </div>
           </div>
           <div class="uk-margin">
