--- a/src/app/customer/layout/sidebar/sidebar.component.html
+++ b/src/app/customer/layout/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
       <!-- <li class="uk-nav-divider"></li> -->
       <li><a [routerLink]="['order']"><span class="uk-margin-small-right" data-uk-icon="icon: list"></span>Đơn hàng</a></li>
       <li><a href="login-dark.html"><span class="uk-margin-small-right" data-uk-icon="icon: comments"></span>Theo dõi đơn hàng</a></li>
-      <li><a href="login-dark.html"><span class="uk-margin-small-right" data-uk-icon="icon: sign-in"></span>Khuyến mại</a></li>
+      <li><a href="login-dark.html"><span class="uk-margin-small-right" data-uk-icon="icon: sign-in"></span>Đăng xuất</a></li>
     </ul>
   </div>
   <div class="uk-position-bottom bar-bottom">
