--- a/src/app/customer/product/product.component.html
+++ b/src/app/customer/product/product.component.html
@@ -6,9 +6,6 @@
       <div class="uk-grid uk-grid-small">
         <div class="uk-width-auto"><h4 class="uk-margin-remove-bottom">Danh sách sản phẩm</h4></div>
         <div class="uk-width-expand uk-text-right">
-          <a href="#" class="uk-icon-link uk-margin-small-right" data-uk-icon="icon: move"></a>
-          <a href="#" class="uk-icon-link uk-margin-small-right" data-uk-icon="icon: cog"></a>
-          <a href="#" class="uk-icon-link" data-uk-icon="icon: close"></a>
         </div>
       </div>
     </div>
@@ -17,28 +14,52 @@
         <div class="uk-placeholder uk-text-center" *ngIf="!products">
           Hiện không có sản phẩm nào
         </div>
-      <table class="uk-table uk-table-hover uk-table-divider uk-table-middle" *ngIf="products">
-        <thead>
-          <tr>
-            <th class="uk-table-shrink" style="width: 15%">Ảnh SP</th>
-            <th>Tên SP</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let p of products">
-            <td><img src="{{p.gallery[0]}}" alt="Alt text" class="uk-border-circle uk-preserve-width" style="max-width: 40px;"></td>
-            <td>{{p.title}}</td>
-            <td>
-              <a href="#" class="uk-icon-link uk-text-success" data-uk-icon="check"></a>
-              <a href="#" class="uk-icon-link uk-text-danger" data-uk-icon="close"></a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
     </div>
+    <div *ngIf="products" class="uk-grid uk-grid-medium uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l  uk-child-width-1-6@xl uk-grid-match js-filter" data-uk-grid="masonry: true" data-uk-sortable="handle: .drag-icon">
+        <!-- card -->
+        <!-- card -->
+        <div class="nature-card" *ngFor="let p of products">
+            <div class="uk-card uk-card-small uk-card-default">
+              <div class="uk-card-header">
+                <div class="uk-grid uk-grid-small uk-text-small" data-uk-grid>
+                  <div class="uk-width-expand">
+                    <span class="cat-txt">Nature / Outdoor</span>
+                  </div>
+                  <div class="uk-width-auto uk-text-right uk-text-muted">
+                    <span data-uk-icon="icon:clock; ratio: 0.8"></span> 3 min.
+                  </div>
+                </div>
+              </div>
+              <div class="uk-card-media">
+                <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+                  <img class="lazy"  data-width="400" data-height="300" alt="" src="{{p.gallery[0]}}">
+                  <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary">
+                    <span data-uk-icon="icon:heart; ratio: 0.8"></span> 12.345 <span data-uk-icon="icon:comment; ratio: 0.8"></span> 12.345
+                  </div>
+                </div>
+                
+              </div>
+              <div class="uk-card-body">
+                <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold">{{p.name}}</h6>
+              </div>
+              <div class="uk-card-footer">
+                <div class="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" data-uk-grid>
+                  <div class="uk-width-expand uk-text-small">
+                    <button class="uk-button uk-button-small uk-button-primary">Sửa</button>
+                  </div>
+                  <div class="uk-width-auto uk-text-right">
+                      <button class="uk-button uk-button-small uk-button-danger">Xóa</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- /card -->
+      </div>
     <a [routerLink]="['create']" class="uk-button uk-button-primary uk-margin">Thêm mới</a>
     </div>
   </div>
+  <!-- list product -->
+  
 </div>
 <!-- /panel -->
