--- a/src/app/customer/layout/header/header.component.html
+++ b/src/app/customer/layout/header/header.component.html
@@ -3,53 +3,10 @@
   <div class="uk-container uk-container-expand uk-background-primary">
     <nav class="uk-navbar uk-light" data-uk-navbar="mode:click">
       <div class="uk-navbar-left">
-        <a class="uk-navbar-item uk-logo" href="#">QrMax</a>
-        <ul class="uk-navbar-nav uk-visible@m">
-          <li class="uk-active"><a href="#">Accounts</a></li>
-          <li>
-            <a href="#">Settings <span data-uk-icon="icon: triangle-down"></span></a>
-            <div class="uk-navbar-dropdown">
-              <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li class="uk-nav-header">YOUR ACCOUNT</li>
-                <li><a href="#"><span data-uk-icon="icon: info"></span> Summary</a></li>
-                <li><a href="#"><span data-uk-icon="icon: refresh"></span> Edit</a></li>
-                <li><a href="#"><span data-uk-icon="icon: settings"></span> Configuration</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#"><span data-uk-icon="icon: image"></span> Your Data</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#"><span data-uk-icon="icon: sign-out"></span> Logout</a></li>
-                
-              </ul>
-            </div>
-          </li>
-        </ul>
-        <div class="uk-navbar-item uk-visible@s">
-          <form action="dashboard.html" class="uk-search uk-search-default">
-            <span data-uk-search-icon></span>
-            <input class="uk-search-input search-field" type="search" placeholder="Search">
-          </form>
-        </div>
+        <a class="uk-navbar-item uk-logo" [routerLink]="['customer']">QrCode - Mecury</a>
       </div>
       <div class="uk-navbar-right">
         <ul class="uk-navbar-nav">
-          <li>
-            <a href="#" data-uk-icon="icon:user"></a>
-            <div class="uk-navbar-dropdown uk-navbar-dropdown-bottom-left">
-              <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li class="uk-nav-header">YOUR ACCOUNT</li>
-                <li><a href="#"><span data-uk-icon="icon: info"></span> Summary</a></li>
-                <li><a href="#"><span data-uk-icon="icon: refresh"></span> Edit</a></li>
-                <li><a href="#"><span data-uk-icon="icon: settings"></span> Configuration</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#"><span data-uk-icon="icon: image"></span> Your Pictures</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#"><span data-uk-icon="icon: sign-out"></span> Logout</a></li>
-                
-              </ul>
-            </div>
-          </li>
-          <li><a href="#" data-uk-icon="icon: settings"></a></li>
-          <li><a href="#" data-uk-icon="icon: cog"></a></li>
           <li><a class="uk-navbar-toggle" data-uk-toggle data-uk-navbar-toggle-icon href="#offcanvas-nav"></a></li>
         </ul>
       </div>
