--- a/src/app/customer/layout/sidebar/sidebar.component.html
+++ b/src/app/customer/layout/sidebar/sidebar.component.html
@@ -2,8 +2,8 @@
 <aside id="left-col" class="uk-light uk-visible@m">
   <div class="profile-bar">
     <div class="uk-grid uk-grid-small uk-flex uk-flex-middle" data-uk-grid>
-      <div class="uk-width-auto"><img src="{{userInfo.logo}}" alt="" class="uk-border-circle profile-img"></div>
-      <div class="uk-width-expand">
+      <div class="uk-width-1-1"><img src="{{userInfo.logo}}" alt="" class="uk-border-circle"  width="100"></div>
+      <div class="uk-width-1-1">
         <span class="uk-text-small uk-text-muted">Xin chào</span>
         <h4 class="uk-margin-remove-vertical text-light">{{userInfo.name}}</h4>
       </div>
@@ -33,7 +33,7 @@
       <!-- <li class="uk-nav-divider"></li> -->
       <li><a [routerLink]="['order']"><span class="uk-margin-small-right" data-uk-icon="icon: list"></span>Đơn hàng</a></li>
       <li><a href="login-dark.html"><span class="uk-margin-small-right" data-uk-icon="icon: comments"></span>Theo dõi đơn hàng</a></li>
-      <li><a href="login-dark.html"><span class="uk-margin-small-right" data-uk-icon="icon: sign-in"></span>Đăng xuất</a></li>
+      <li style="cursor: pointer;" (click)="onLogout()"><span class="uk-margin-small-right" data-uk-icon="icon: sign-in" ></span>Đăng xuất</li>
     </ul>
   </div>
   <div class="uk-position-bottom bar-bottom">
@@ -57,3 +57,20 @@
   </div>
 </aside>
 <!-- /LEFT BAR -->
+<!-- OFFCANVAS -->
+<div id="offcanvas-nav" data-uk-offcanvas="flip: true; overlay: true">
+  <div class="uk-offcanvas-bar uk-offcanvas-bar-animation uk-offcanvas-slide">
+    <button class="uk-offcanvas-close uk-close uk-icon" type="button" data-uk-close></button>
+    <ul class="uk-nav uk-nav-default">
+        <li><a [routerLink]="['/customer']"><span class="uk-margin-small-right" data-uk-icon="icon: home"></span> Thống kê</a></li>
+        <li><a [routerLink]="['product']"><span class="uk-margin-small-right" data-uk-icon="icon: tv"></span> Sản phẩm</a></li>
+        <!-- <li class="uk-nav-divider"></li> -->
+        <li><a [routerLink]="['order']"><span class="uk-margin-small-right" data-uk-icon="icon: list"></span>Đơn hàng</a></li>
+        <li><a href="login-dark.html"><span class="uk-margin-small-right" data-uk-icon="icon: comments"></span>Theo dõi đơn hàng</a></li>
+        <li style="cursor: pointer;" (click)="onLogout()"><span class="uk-margin-small-right" data-uk-icon="icon: sign-in" ></span>Đăng xuất</li>
+    </ul>
+    <h3>Title</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  </div>
+</div>
+<!-- /OFFCANVAS -->
