--- a/src/app/admin/layout/header/header.component.html
+++ b/src/app/admin/layout/header/header.component.html
@@ -3,7 +3,7 @@
         <nav uk-navbar>
             <div class="uk-navbar-left">
                 <a href="#" class="uk-navbar-item uk-logo">
-                    UI Admin
+                    QRCode - United Admin
                 </a>
             </div>
             <div class="uk-navbar-right uk-light">
