--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
         <li class="uk-nav-header">
             Menu
         </li>
-        <li><a [routerLink]="['/customer']"><span class="uk-margin-small-right" data-uk-icon="icon: user"></span> Khách hàng</a></li>
+        <li><a [routerLink]="['customer']"><span class="uk-margin-small-right" data-uk-icon="icon: user"></span> Khách hàng</a></li>
       <li><a [routerLink]="['order']"><span class="uk-margin-small-right" data-uk-icon="icon: list"></span>Đơn hàng</a></li>
 
       <li><a [routerLink]="['product']"><span class="uk-margin-small-right" data-uk-icon="icon: tv"></span> Sản phẩm</a></li>
