--- a/src/app/customer/order/order.component.html
+++ b/src/app/customer/order/order.component.html
@@ -30,7 +30,7 @@
             <td>{{order.name}}</td>
             <td>{{qrcodeTypesMap[order.type]}}</td>
             <td>
-                <span class="{{order.status==='pending'?'uk-text-danger':'uk-text-success'}}">{{order.status==='pending'?'Chờ duyệt':'Đang phân phối'}}</span>
+                <span class="{{order.activated?'uk-text-success':'uk-text-danger'}}">{{order.activated?'Đang phân phối':'Chờ duyệt'}}</span>
             </td>
           </tr>
         </tbody>
