--- a/src/app/admin/order/order.component.html
+++ b/src/app/admin/order/order.component.html
@@ -6,9 +6,7 @@
         <div class="uk-grid uk-grid-small">
           <div class="uk-width-auto"><h4 class="uk-margin-remove-bottom">Danh sách đơn hàng</h4></div>
           <div class="uk-width-expand uk-text-right">
-            <a href="#" class="uk-icon-link uk-margin-small-right" data-uk-icon="icon: move"></a>
-            <a href="#" class="uk-icon-link uk-margin-small-right" data-uk-icon="icon: cog"></a>
-            <a href="#" class="uk-icon-link" data-uk-icon="icon: close"></a>
+            <a href="#" class="uk-icon-link uk-margin-small-right" data-uk-icon="icon: refresh"></a>
           </div>
         </div>
       </div>
@@ -23,7 +21,7 @@
               <th>Tên đơn hàng</th>
               <th>Loại QRCode</th>
               <th>Số lượng</th>
-              <th>Trạng thái</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -33,8 +31,8 @@
               <td>{{order.quantity}}</td>
               <td>
                   <span class="uk-badge" style="cursor: pointer;" *ngIf="!order.activated" (click)="onDelivery(order)">Phân phối</span>
-                  <a href="#modal-center" uk-toggle class="uk-badge uk-success"  style="cursor: pointer;position: relative;" (click)="selectedOrder = order">Xuất CSV</a>
-                  
+                  <a href="#modal-center" uk-toggle class="uk-badge uk-success"  style="cursor: pointer;position: relative;" (click)="selectedOrder = order" *ngIf="order.type!=='qrcode-type1'">Xuất CSV</a>
+                  <span    style="cursor: pointer;" *ngIf="order.type==='qrcode-type1'">{{endpoint+order.id}}</span>
               </td>
             </tr>
           </tbody>
