--- a/src/app/customer/order/order.component.html
+++ b/src/app/customer/order/order.component.html
@@ -5,17 +5,18 @@
     <div class="uk-card-header">
       <div class="uk-grid uk-grid-small">
         <div class="uk-width-auto"><h4 class="uk-margin-remove-bottom">Danh sách đơn hàng</h4></div>
-        <div class="uk-width-expand uk-text-right">
-          <a href="#" class="uk-icon-link uk-margin-small-right" data-uk-icon="icon: move"></a>
-          <a href="#" class="uk-icon-link uk-margin-small-right" data-uk-icon="icon: cog"></a>
-          <a href="#" class="uk-icon-link" data-uk-icon="icon: close"></a>
+        <div class="uk-width-expand uk-text-right"> 
+          <a href="#" class="uk-icon-link uk-margin-small-right" data-uk-icon="icon: refresh"></a>
         </div>
       </div>
     </div>
     <div class="uk-card-body">
       <div class="uk-overflow-auto">
+        <div class="uk-alert-danger" uk-alert>
+            <p>Lưu ý! Đơn hàng đã phân phối không thể xóa. Liên hệ với số hotline để được trợ giúp</p>
+        </div>
         <div class="uk-placeholder uk-text-center" *ngIf="!orders">
-          Hiện không có đơn hàng nào
+          Hiện không có đơn hàng nào!!!
         </div>
       <table class="uk-table uk-table-hover uk-table-divider uk-table-middle" *ngIf="orders">
         <thead>
@@ -27,7 +28,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let order of orders">
+          <tr *ngFor="let order of orders;let i=index">
             <td>{{order.name}}</td>
             <td>{{qrcodeTypesMap[order.type]}}</td>
             
@@ -37,7 +38,7 @@
             <td>
               <ul class="uk-iconnav">
                 <li><a href="#" uk-icon="icon: file-edit"></a></li>
-                <li><a href="#" uk-icon="icon: trash"></a></li>
+                <li><a href="#" uk-icon="icon: trash" (click)="onDeleteOrder(order.id, i)"></a></li>
               </ul>
             </td>
           </tr>
