--- a/src/app/guest/scan-product/scan-product.component.html
+++ b/src/app/guest/scan-product/scan-product.component.html
@@ -1,7 +1,7 @@
 
 <!-- panel -->
 <div class=" uk-width-1-1@l uk-width-1-1@xl">
-    <div class="uk-card uk-card-default uk-card-large uk-card-hover ">
+    <div class="uk-card uk-card-default uk-card-small uk-card-hover">
       <div class="uk-card-header uk-background-primary">
         <div class="uk-grid uk-grid-small">
           <div class="uk-width-auto"><h4 class="uk-margin-remove-bottom" style="color: white">Thông tin sản phẩm</h4></div>
