--- a/src/app/guest/scan-product/scan-product.component.html
+++ b/src/app/guest/scan-product/scan-product.component.html
@@ -4,13 +4,44 @@
     <div class="uk-card uk-card-default uk-card-small uk-card-hover">
       <div class="uk-card-header uk-background-primary">
         <div class="uk-grid uk-grid-small">
+          <div class="uk-width-auto"><h4 class="uk-margin-remove-bottom" style="color: white">Kiểm tra sản phẩm</h4></div>
+        </div>
+      </div>
+      <div class="uk-card-body">
+        <div class="uk-overflow-auto">
+            <div class="uk-text-center">
+                <img src="/assets/image/scan_product.png" alt="" *ngIf="!isVerify">
+                <img src="/assets/image/check-mark.png" alt="" *ngIf="isVerify">
+            </div>
+            <div class="uk-text-center uk-margin">
+                <div class="uk-margin">
+                    <input class="uk-input uk-form-width-small" type="text"  #code>
+                    <button class="uk-button uk-button-primary uk-margin" (click)="verifyProduct(code.value)">Xác nhận</button>
+                </div>
+            </div>
+            <div class="uk-alert-warning" uk-alert *ngIf="!isVerify">
+                <p>Vui lòng nhập mã thẻ cào trên tem sản phẩm để kiểm tra nguồn gốc sản phẩm.</p>
+            </div>
+            <div class="uk-alert-success" uk-alert *ngIf="isVerify">
+                <p>Sản phẩm bạn mua là sản phẩm chính hãng được xác thực bởi trung tâm chống hàng giả.</p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- /panel -->
+<!-- panel -->
+<div class=" uk-width-1-1@l uk-width-1-1@xl">
+    <div class="uk-card uk-card-default uk-card-small uk-card-hover">
+      <div class="uk-card-header uk-background-primary">
+        <div class="uk-grid uk-grid-small">
           <div class="uk-width-auto"><h4 class="uk-margin-remove-bottom" style="color: white">Thông tin sản phẩm</h4></div>
         </div>
       </div>
       <div class="uk-card-body">
         <div class="uk-overflow-auto">
             <article class="uk-article">
-                <p class="uk-text-lead">{{product.name}}.</p>
+                <p class="uk-text-lead">{{product.name}}</p>
                 <div [innerHTML]="product.description"></div>
             </article>
             <div uk-slider="center: true" class="uk-margin">
@@ -39,13 +70,13 @@
     <div class="uk-card uk-card-default uk-card-small uk-card-hover">
       <div class="uk-card-header uk-background-primary">
         <div class="uk-grid uk-grid-small">
-          <div class="uk-width-auto"><h4 class="uk-margin-remove-bottom" style="color: white">Thông tin khách hàng</h4></div>
+          <div class="uk-width-auto"><h4 class="uk-margin-remove-bottom" style="color: white">Thông tin nhà cung cấp</h4></div>
         </div>
       </div>
       <div class="uk-card-body">
         <div class="uk-overflow-auto">
                 <article class="uk-article">
-                    <p class="uk-text-lead">{{customer.company_name}}.</p>
+                    <p class="uk-text-lead">{{customer.company_name}}</p>
                     <div [innerHTML]="customer.information"></div>
                 </article>
         </div>
