--- a/src/app/admin/customer/customer.component.html
+++ b/src/app/admin/customer/customer.component.html
@@ -34,7 +34,7 @@
           </tbody>
         </table>
       </div>
-      <a [routerLink]="['create']" class="uk-button uk-button-primary uk-margin">Thêm mới</a>
+      <a [routerLink]="['register']" class="uk-button uk-button-primary uk-margin">Thêm mới</a>
       </div>
     </div>
   </div>
