--- a/src/app/guest/scan-product/scan-product.component.html
+++ b/src/app/guest/scan-product/scan-product.component.html
@@ -10,8 +10,8 @@
       <div class="uk-card-body">
         <div class="uk-overflow-auto">
             <div class="uk-text-center">
-                <img src="/assets/image/scan_product.png" alt="" *ngIf="!isVerify">
-                <img src="/assets/image/check-mark.png" alt="" *ngIf="isVerify">
+                <img src="assets/image/scan_product.png" alt="" *ngIf="!isVerify">
+                <img src="assets/image/check-mark.png" alt="" *ngIf="isVerify">
             </div>
             <div class="uk-text-center uk-margin" *ngIf="!isVerify">
                 <div class="uk-margin">
