--- a/src/app/guest/scan-product/scan-product.component.html
+++ b/src/app/guest/scan-product/scan-product.component.html
@@ -49,7 +49,7 @@
   </div>
   <!-- /panel -->
 <!-- panel -->
-<div class=" uk-width-1-1@l uk-width-1-1@xl">
+<div class=" uk-width-1-1@l uk-width-1-1@xl" *ngIf="isVerify">
     <div class="uk-card uk-card-default uk-card-small uk-card-hover">
       <div class="uk-card-header uk-background-primary">
         <div class="uk-grid uk-grid-small">
@@ -84,7 +84,7 @@
   </div>
   <!-- /panel -->
   <!-- panel -->
-<div class=" uk-width-1-1@l uk-width-1-1@xl">
+<div class=" uk-width-1-1@l uk-width-1-1@xl" *ngIf="isVerify">
     <div class="uk-card uk-card-default uk-card-small uk-card-hover">
       <div class="uk-card-header uk-background-primary">
         <div class="uk-grid uk-grid-small">
