--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div id="sidebar" class="tm-sidebar-left uk-background-default">
     <div class="text-center">
         <div class="user">
-            <img id="avatar" width="100" class="uk-border-circle" src="https://gitcdn.xyz/cdn/ConsoleTVs/UIAdmin/624b947d80b1b9d842e55053cf3e1af461589dea/images/avatar.jpg" />
+            <img id="avatar" width="100" class="uk-border-circle" src="assets/image/admin.png" />
             <div class="uk-margin-top"></div>
             <div id="name" class="uk-text-truncate">Xin chào</div>
             <div id="email" class="uk-text-truncate">Admin</div>
