--- a/src/app/guest/scan-product/scan-product.component.html
+++ b/src/app/guest/scan-product/scan-product.component.html
@@ -15,12 +15,15 @@
             </div>
             <div class="uk-text-center uk-margin" *ngIf="!isVerify">
                 <div class="uk-margin">
-                    <input class="uk-input uk-form-width-small" type="text"  #code>
-                    <button class="uk-button uk-button-primary uk-margin" (click)="verifyProduct(code.value)">Xác nhận</button>
+                    <input class="uk-input uk-form-width-small" type="text" [disabled]="qrcodeType==='qrcode-type2'" name="code" [(ngModel)]="code">
+                    <button class="uk-button uk-button-primary uk-margin" (click)="verifyProduct()">Xác nhận</button>
                 </div>
             </div>
-            <div class="uk-alert-warning" uk-alert *ngIf="!isVerify">
+            <div class="uk-alert-warning" uk-alert *ngIf="!isVerify && qrcodeType==='qrcode-type3'">
                 <p>Vui lòng nhập mã thẻ cào trên tem sản phẩm để kiểm tra nguồn gốc sản phẩm.</p>
+            </div>
+            <div class="uk-alert-warning" uk-alert *ngIf="!isVerify  && qrcodeType==='qrcode-type2'">
+                <p>Đối chiếu mã trên với mã thẻ cào trên tem QR code để đối chiếu sau đó ấn xác nhận.</p>
             </div>
             <div class="uk-alert-success" uk-alert *ngIf="isVerify">
                 <p>Sản phẩm bạn mua là sản phẩm chính hãng được xác thực bởi trung tâm chống hàng giả.</p>
@@ -60,7 +63,6 @@
         <div class="uk-overflow-auto">
             <article class="uk-article">
                 <p class="uk-text-lead">{{product.name}}</p>
-                <div [innerHTML]="product.description"></div>
             </article>
             <div uk-slider="center: true" class="uk-margin">
                 <div class="uk-position-relative uk-visible-toggle uk-light">
@@ -78,6 +80,8 @@
                 </div>
                 <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
             </div>
+            <div [innerHTML]="product.description"></div>
+            
         </div>
       </div>
     </div>
@@ -100,5 +104,7 @@
         </div>
       </div>
     </div>
+    <a href="tel:{{customer.phone}}"><img src="assets/image/telephone-call.png" alt="" style="position: fixed;bottom:16px;right:16px"></a>
+            
   </div>
   <!-- /panel -->
