--- a/src/app/guest/scan-marketing/scan-marketing.component.html
+++ b/src/app/guest/scan-marketing/scan-marketing.component.html
@@ -4,7 +4,11 @@
 <div class="uk-light wrap uk-background-norepeat uk-background-cover uk-background-center-center uk-background-secondary" style="background-image: url('assets/image/bg.jpg')">
   <div class="uk-offcanvas-content">
     <div class="uk-flex uk-flex-center uk-flex-middle uk-height-viewport uk-position-z-index uk-position-relative" data-uk-height-viewport="min-height: 400">
-        <div class="lds-facebook"><div></div><div></div><div></div></div>
+        <div class="uk-text-center">
+            <div class="lds-facebook"><div></div><div></div><div></div></div>
+            <h4>Đang chuyển trang ...</h4>
+        </div>
+        
     </div>
   </div>
 </div>
