--- a/src/app/guest/scan-product/scan-product.component.html
+++ b/src/app/guest/scan-product/scan-product.component.html
@@ -7,7 +7,7 @@
           <div class="uk-width-auto"><h4 class="uk-margin-remove-bottom" style="color: white">Kiểm tra sản phẩm</h4></div>
         </div>
       </div>
-      <div class="uk-card-body">
+      <div class="uk-card-body  {{isVerify?'':'uk-flex uk-flex-middle'}}" [style.height]="isVerify?'auto':'calc(100vh - 55px)'">
         <div class="uk-overflow-auto">
             <div class="uk-text-center">
                 <img src="assets/image/scan_product.png" alt="" *ngIf="!isVerify">
@@ -15,15 +15,15 @@
             </div>
             <div class="uk-text-center uk-margin" *ngIf="!isVerify">
                 <div class="uk-margin">
-                    <input class="uk-input uk-form-width-small" type="text" [disabled]="qrcodeType==='qrcode-type2'" name="code" [(ngModel)]="code">
+                    <input class="uk-input uk-form-width-small" type="text" [disabled]="qrcodeType==='qrcode-type1'" name="code" [(ngModel)]="code">
                     <button class="uk-button uk-button-primary uk-margin" (click)="verifyProduct()">Xác nhận</button>
                 </div>
             </div>
-            <div class="uk-alert-warning" uk-alert *ngIf="!isVerify && qrcodeType==='qrcode-type3'">
+            <div class="uk-alert-warning" uk-alert *ngIf="!isVerify && qrcodeType==='qrcode-type2'">
                 <p>Vui lòng nhập mã thẻ cào trên tem sản phẩm để kiểm tra nguồn gốc sản phẩm.</p>
             </div>
-            <div class="uk-alert-warning" uk-alert *ngIf="!isVerify  && qrcodeType==='qrcode-type2'">
-                <p>Đối chiếu mã trên với mã thẻ cào trên tem QR code để đối chiếu sau đó ấn xác nhận.</p>
+            <div class="uk-alert-warning" uk-alert *ngIf="!isVerify  && qrcodeType==='qrcode-type1'">
+                <p>Đối chiếu mã trên với mã thẻ cào trên tem QR code sau đó ấn xác nhận.</p>
             </div>
             <div class="uk-alert-success" uk-alert *ngIf="isVerify">
                 <p>Sản phẩm bạn mua là sản phẩm chính hãng được xác thực bởi trung tâm chống hàng giả.</p>
